--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -79,7 +79,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=emmtoexcel.MainFrame
+main.class=ru.rzd.emmtoexcel.MainFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
