Доделал выгрузку. Добавил класс для консольного запуска.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,7 +55,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.13-20150929.jar}:\
     ${file.reference.poi-scratchpad-3.13-20150929.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.sqljdbc4-4.0.2206.100.jar}
+    ${file.reference.sqljdbc4-4.0.2206.100.jar}:\
+    ${libs.dateCHooser.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
